Include information about how to create an exe file